tests/fixtures/invalid/bytes_floordiv_none.py
# Cannot floor divide Bytes and None
x: bytes = b"hello" // None
